force-app/main/default/objects/ContractLineItem/fields/Additional_Scheduling_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Scheduling_Information__c</fullName>
    <label>Additional Scheduling Information</label>
    <length>150</length>
    <type>Text</type>
</CustomField>