force-app/main/default/objects/ContractLineItem/fields/Calculated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Duration__c</fullName>
    <description>Calculated Duration in minutes</description>
    <label>Calculated Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>