force-app/main/default/objects/ContractLineItem/fields/Cost_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_Code__c</fullName>
    <label>Cost Center Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>