force-app/main/default/objects/ContractLineItem/fields/Desired_Visual_Quality__c.field-meta.xml
<CustomField>
    <fullName>Desired_Visual_Quality__c</fullName>
    <label>Desired Visual Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>