force-app/main/default/objects/ContractLineItem/fields/Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration__c</fullName>
    <description>Estimated Duration in minutes</description>
    <label>Estimated Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>