force-app/main/default/objects/ContractLineItem/fields/LMRA__c.field-meta.xml
<CustomField>
    <fullName>LMRA__c</fullName>
    <label>LMRA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>