force-app/main/default/objects/ContractLineItem/fields/Parent_Customer__c.field-meta.xml
<CustomField>
    <fullName>Parent_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>