force-app/main/default/objects/ContractLineItem/fields/Planning_Type__c.field-meta.xml
<CustomField>
    <fullName>Planning_Type__c</fullName>
    <label>Planning Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Type</valueSetName>
    </valueSet>
</CustomField>