force-app/main/default/objects/ContractLineItem/fields/Recurrence_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Pattern__c</fullName>
    <label>Recurrence Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>