force-app/main/default/objects/ContractLineItem/fields/Scheduling_Interval__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Interval__c</fullName>
    <inlineHelpText>an integer between 1 and 31 if FREQ=DAILY
an integer between 1 and 26 if FREQ=WEEKLY
an integer between 1 and 12 if FREQ=MONTHLY</inlineHelpText>
    <label>Scheduling Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>