force-app/main/default/objects/ContractLineItem/fields/Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Required?</label>
    <type>Checkbox</type>
</CustomField>